tests/expectations/compiler/async_blocks/future_not_all_passed_to_async_block_fail.out
Error [ETYC0372104]: Not all Finals were consumed: f1
    --> compiler-test:16:22
     |
  16 |         return final {
     |                      ^
  17 |             f0.run(); 
     |             ^^^^^^^^^^
  18 |             f3.run(); 
     |             ^^^^^^^^^^
  19 |             f2.run(); 
     |             ^^^^^^^^^^
  20 |             f5.run(); 
     |             ^^^^^^^^^^
  21 |             f4.run();
     |             ^^^^^^^^^
  22 |         };
     |         ^
     |
     = Make sure all Finals are consumed exactly once. Consume by passing to a final fn call or final block.
